elb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-page-loadbalancer
  namespace: statuspage
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "classic"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: statuspage
    component: web
