nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-page-nodeport
  namespace: statuspage
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080  # This will expose the service on port 30080 on all nodes
  selector:
    app: statuspage-web  # Make sure this matches your web deployment's selector
