statuspage-direct-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statuspage-direct
  namespace: statuspage
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: statuspage
    component: web
