statuspage-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: statuspage-nodeport
  namespace: statuspage
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080  # This will expose the service on port 30080 on all nodes
  selector:
    app: statuspage
    component: web
